--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "dompdf/dompdf": "^3.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
