--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.10",
         "maennchen/zipstream-php": "^2.1",
-        "phpoffice/phpspreadsheet": "^1.29"
+        "phpoffice/phpspreadsheet": "^1.29",
+        "symfony/string": "^7.2",
+        "symfony/console": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
